Fix illuminati eye position on mobile and add swipe gestures for carousels

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ body.loaded .subtitle {
     }
     
     .container {
-        margin-top: 25%;
+        margin-top: 30%;
         padding: 0 15px;
     }
     
@@ -365,7 +365,7 @@ body.loaded .subtitle {
     .eye {
         width: 50px;
         height: 50px;
-        top: 12%;
+        top: 16%;
     }
     
     /* Modal adjustments for small screens */
